# graph_merge

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: generator-generic-ossf-slsa3-publish.yml
example/: example.ipynb
src/graph_merge/: dfs.py  merge_graphs.py  similarity.py  visual.py
tests/: test_dfs.py  test_examples.py  test_merge_graphs.py
tests/data/: bom_example.json
